<?xml version="1.0"?>
<package>
  <name>aerial_robot_gazebo</name>
  <version>0.0.0</version>
  <description>The aerial_robot_gazebo package</description>

  <maintainer email="chou@todo.todo">chou</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>aerial_robot_model</build_depend> 

  <run_depend>rrbot_description</run_depend>
  <run_depend>rrbot_control</run_depend> 
  <run_depend>gazebo_ros</run_depend> 
  <run_depend>aerial_robot_model</run_depend> 


  <export>
  </export>
</package>
