<?xml version="1.0"?>
<package>
  <name>aerial_robot_model</name>
  <version>1.3.4</version>
  <description>The model for aerial robots</description>

  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">Bakui Chou</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/beginner_tutorials</url>
  <author email="chou@jsk.imi.i.u-tokyo.ac.jp">Bakui Chou</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen_conversions</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>kalman_filter</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>liburdfdom-headers-dev</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>spinal</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_kdl</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>eigen_conversions</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>kalman_filter</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>spinal</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>tf2_eigen</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>tf2_kdl</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>xacro</run_depend>

  <export>
    <aerial_robot_model plugin="${prefix}/plugins/robot_model_plugins.xml"/>
  </export>

</package>
