<?xml version="1.0"?>
<package>
  <name>aerial_robot_msgs</name>
  <version>0.1.0</version>
  <description>The common msgs for aerial robot platform</description>

  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">Bakui Chou</maintainer> 
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/beginner_tutorials</url> 
  <author email="chou@jsk.imi.i.u-tokyo.ac.jp">Bakui Chou</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
<!--  <build_depend>rospy</build_depend> -->
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
<!--  <run_depend>rospy</run_depend> -->
  <run_depend>std_msgs</run_depend>

</package>