<?xml version="1.0"?>
<package>
  <name>aerial_robot_msgs</name>
  <version>1.3.4</version>
  <description>The common msgs for aerial robot platform</description>

  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">Bakui Chou</maintainer> 
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/beginner_tutorials</url> 
  <author email="chou@jsk.imi.i.u-tokyo.ac.jp">Bakui Chou</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
