<?xml version="1.0"?>
<package format="2">
  <name>data_glove</name>
  <version>0.0.1</version>
  <description>The data_glove package</description>

  <maintainer email="1592890733@qq.com">Jiaxuan LI</maintainer>
  <author>Jiaxuan LI</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>python-osc</depend>

</package>
