<?xml version="1.0"?>
<package>
  <name>kalman_filter</name>
  <version>0.0.0</version>
  <description>The kalman_filter package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">bakui</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>pluginlib</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>pluginlib</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <kalman_filter plugin="${prefix}/kf_plugins.xml" /> 
  </export>
</package>
