<?xml version="1.0"?>
<package format="2">
  <name>tree_tracking</name>
  <version>0.0.0</version>
  <description>The tree tracking package</description>

  <maintainer email="kozuka@jsk.imi.i.u-tokyo.ac.jp">Haruki Kozuka</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>laser_filters</build_depend>
  <build_depend>filters</build_depend>

  <build_export_depend>cmake_modules</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>image_geometry</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>laser_filters</build_export_depend>
  <build_export_depend>filters</build_export_depend>

  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>laser_filters</exec_depend>
  <exec_depend>filters</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- <hokuyo_estimation plugin="${prefix}/vision_detection_plugins.xml"/> -->
    <filters plugin="${prefix}/laser_filters_plugins.xml"/>
  </export>
</package>
